# logger

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: karakeep.rs  main.rs  secrets.rs  settings.rs
src/settings/: frequency.rs
