[package]
name = "logger"
version = "0.1.0"
authors = ["Pablo Baeyens <pbaeyens31+github@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
async-std = { version = "1.13.1", features = ["attributes"] }
chrono = "0.4.43"
clap = { version = "4.5.51", features = ["derive"] }
config = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
wallabag-api = "0.4.3"
wasm-bindgen = ">=0.2.88" # https://github.com/rust-lang/rust/issues/71871
