[package]
name = "logger"
version = "0.1.0"
authors = ["Pablo Baeyens <pbaeyens31+github@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
async-std = { version = "1.13.1", features = ["attributes", "tokio1"] }
chrono = "0.4.43"
clap = { version = "4.5.60", features = ["derive"] }
config = "0.14.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
